--- a/index.html
+++ b/index.html
@@ -336,8 +336,9 @@
             
             const [activeCell, setActiveCell] = useState(null);
             const [userStatsModal, setUserStatsModal] = useState(null); 
-            const [showAutoFill, setShowAutoFill] = useState(false);
+            const [showAutoFill, setShowAutoFill] = useState(false); // Fixed missing state
             const [confirmModal, setConfirmModal] = useState({ show: false, title: '', msg: '', action: null, isDangerous: false });
+            const [showInfoModal, setShowInfoModal] = useState(false);
             const [showLogModal, setShowLogModal] = useState(false); 
             const [toast, setToast] = useState(null);
             const fileInputRef = useRef(null);
@@ -790,7 +791,7 @@
                             <div className="flex items-center gap-3 min-w-max">
                                 <div className="flex flex-col mr-2">
                                     <div className="flex items-center gap-2 cursor-pointer" onClick={() => { if(!isConnected) showToast('尚未連線至雲端', 'error'); }}>
-                                        <h1 className="text-2xl font-black text-slate-800 tracking-wider">值班表</h1>
+                                        <h1 className="text-2xl font-black text-slate-800 tracking-wider">值班表 v4.3</h1>
                                         <div className={`w-3 h-3 rounded-full ${isConnected ? 'bg-green-500 shadow-[0_0_8px_rgba(34,197,94,0.8)]' : 'bg-red-500 shadow-[0_0_8px_rgba(239,68,68,0.8)]'}`} title={isConnected ? "已連線至雲端" : "未連線"}></div>
                                     </div>
                                     <div className="flex items-center gap-2 mt-1">
